--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
-  "name": "swagger-ui",
-  "version": "3.50.0",
+  "name": "kramo-api-doc",
+  "version": "1.0.0",
   "main": "dist/swagger-ui.js",
   "module": "dist/swagger-ui-es-bundle.js",
-  "homepage": "https://github.com/swagger-api/swagger-ui",
-  "repository": "git@github.com:swagger-api/swagger-ui.git",
-  "contributors": [
-    "(in alphabetical order)",
-    "Anna Bodnia <anna.bodnia@gmail.com>",
-    "Buu Nguyen <buunguyen@gmail.com>",
-    "Josh Ponelat <jponelat@gmail.com>",
-    "Kyle Shockey <kyleshockey@gmail.com>",
-    "Robert Barnwell <robert@robertismy.name>",
-    "Sahar Jafari <shr.jafari@gmail.com>"
-  ],
+  "homepage": "https://kramo.vercel.app/",
+  "repository": "https://github.com/SeoSang/Kramo-Api-Doc",
   "license": "Apache-2.0",
   "scripts": {
     "automated-release": "release-it -VV --config ./release/.release-it.json",
