--- a/dev-helpers/kramo/api.yaml
+++ b/dev-helpers/kramo/api.yaml
@@ -1,15 +1,15 @@
 swagger: '2.0'
 info:
   description: 'Kramo 의 API 문서입니다. NextJS 를 기반으로 돌아가고, 작성 중에 있습니다.'
-  version: '0.0.1'
+  version: '1.0.0'
   title: 'Kramo'
-  contact:
-    email: 'ddrrpg@naver.com'
+  termsOfService: "https://github.com/Memo8-KoreaUniv/kramo/wiki/"
   license:
     name: 'MIT'
     url: 'https://opensource.org/licenses/MIT'
-host: 'www.host미정'
-basePath: '/v0'
+  contact:
+    email: 'ddrrpg@naver.com'
+host: 'kramo.vercel.app'
 tags:
   - name: 'admin'
     description: '관리자용 api'
@@ -21,20 +21,9 @@ tags:
     description: '메모 도메인'
   - name: 'history'
     description: '히스토리 도메인'
-    # externalDocs:
-    #   description: 'Github'
-    #   url: 'https://github.com/Memo8-KoreaUniv/kramo'
 schemes:
-  - 'http'
-  # - 'https'
+  - 'https'
 securityDefinitions:
-  # petstore_auth:
-  #   type: 'oauth2'
-  #   authorizationUrl: 'http://petstore.swagger.io/oauth/dialog'
-  #   flow: 'implicit'
-  #   scopes:
-  #     write:pets: 'modify pets in your account'
-  #     read:pets: 'read your pets'
   ormakkc:
     type: apiKey
     name: Cookie
